# OpenChat

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  LICENSE.md  MEMORY_SYSTEM_PROGRESS.md  PLUGIN_DEBUG_GUIDE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM_PLAN.md  PLUGIN_TEST_CHECKLIST.md  README.md  TOOL_SYSTEM.md  app.py  fastapi_server.py  package-lock.json  package.json  pyproject.toml  start_backend.ps1  test-fallback-title.ts  test-reasoning-title.ts  test-search-engine.ts  test-theme-persistence.html  test-title-generation.ts  test-title-tags.ts  test-websearch.js
OpenChat/: .gitignore
OpenChat/src/: index.html  main.js  styles.css
OpenChat/src-tauri/: Cargo.toml  start_backend.ps1  tauri.conf.json
plugins-bundle/: .gitkeep  README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/permissions/: commands.toml
src-tauri/src/: lib.rs
src/components/: AccountMenu.tsx  BrowserView.tsx  ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  CodeBlock.tsx  ModelSelector.tsx  PersonaSidebar.tsx  PluginCard.tsx  PluginConfigPanel.tsx  PluginDocumentation.tsx  PluginHookRenderer.tsx  PluginManager.tsx  PluginSettings.tsx  ProfileButton.tsx  PromptSettingsModal.tsx  ProviderSettings.tsx  ReasoningBlock.tsx  SearchResultsDisplay.tsx  Settings.tsx  SettingsModal.tsx  Sidebar.tsx  SimpleBrowser.tsx  SystemPromptModal.tsx  ThinkingIndicator.tsx  TokenUsageDropdown.tsx  WebSearchSettings.tsx
templates/: index.html
toolmodels/: langsearch_tool.py
(+146 files in other folders)
