[project]
name = "repl-nix-workspace"
version = "0.2.3"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-session>=0.8.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.114.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    # LangChain ecosystem for tools + Ollama
    "langchain>=0.2.16",
    "langchain-community>=0.2.11",
    "langchain-ollama>=0.1.1",
    "langchain-openai>=0.1.23",
    # Env helpers
    "python-dotenv>=1.0.1",
]
